# Kursovaya

nodes&edges/: CMakeLists.txt  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_graphwidget.cpp  moc_mainwindow.cpp  node.cpp  node.h  params.json  ui_mainwindow.h
